Remove fixed background on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,7 +25,6 @@ body {
     body {
         background: {
             size: 150%, 150%;
-            attachment: fixed, fixed;
             position: top -150% left 190%, bottom -160% right 190%;
         }
     }    
